--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,158 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    background-image: url('./app/img/worspace.jpg');
+    background-size: cover; 
+    color: white;
+    position: relative;
+    z-index: 1;
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,.7);
+        z-index: -1;
+    }
+}
+
+input {
+    transition: box-shadow .3s;
+}
+
+input[type='text'], input[type='password'], input[type='email'] {
+    width: 200px;
+    height: 30px;
+    padding: 5px;
+    margin: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+}
+
+input[type='checkbox'] {
+    margin-right: 20px;
+}
+
+input[type='datetime-local'] {
+    border-radius: 10px;
+    height: 30px;
+    border: none;
+    outline: none;
+    padding: 5px;
+}
+
+
+h1 {
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+h2 {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+ul {
+    padding: 10px 20px;
+}
+
+li {
+    font-size: 18px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+button {
+    width: 100px;
+    height: 30px;
+    background-color: darkcyan;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    margin: 10px 20px;
+    transition: box-shadow .3s; 
+    outline: none;
+}
+
+button:hover, input:hover {
+    box-shadow: 0 0 10px white;
+    transition: box-shadow .3s;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.login-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;  
+}
+
+.login-input-button-block {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.completed {
+    text-decoration: line-through;
+}
+
+.todo-list {
+    background-color: rgba(0,0,0,.7);
+    border-radius: 20px; 
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+li:hover .item-button-block, li:hover .date-value {
+    opacity: 1;
+    transition: all .5s;
+    transform: translate(0, 0px);
+}
+.item-button-block {
+    opacity: 0;
+    margin-left: 80px;
+    transition: all .5s;
+}
+
+.date-value {
+    margin-left: 20px;
+    opacity: 0;
+    transition: all .5s;
+    transform: translate(0, -20px);
+}
+
+#cancel-button{
+    opacity: 0;
+    transition: all .5s;
+} 
+
+.edit-input:hover  #cancel-button{
+    opacity: 1;
+    transition: all .5s;
+} 
