--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,6 +116,32 @@ button:hover, input:hover {
     justify-content: space-between;
 
 }
+#sign-up-section {
+    width: 60vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.sign-up-input-block {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+sign-up-button-block {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.date-value {
+    margin-left: 20px;
+    opacity: 0;
+    transition: all .5s;
+    transform: translate(0, -20px);
+    text-decoration: none !important;
+}
 
 .completed {
     text-decoration: line-through;
@@ -140,12 +166,7 @@ li:hover .item-button-block, li:hover .date-value {
     transition: all .5s;
 }
 
-.date-value {
-    margin-left: 20px;
-    opacity: 0;
-    transition: all .5s;
-    transform: translate(0, -20px);
-}
+
 
 #cancel-button{
     opacity: 0;
